modifies script tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div id="root">
       <h1>Not rendered</h1>
     </div> 
-    <scripts type="module" href="./App.js"></scripts>  
+    <script type="module" src="./App.js"></script>  
   </body>
 </html>
